--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/RevisarPedido.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/RevisarPedido.cshtml
@@ -1,4 +1,4 @@
-﻿@model  MVC.Presentacion.Models.Pedidos.PedidoModel
+﻿@model  MVC.Presentacion.Models.Pedidos.RegistrarPedidoModel
 <!DOCTYPE html>
 
 <html>
@@ -80,7 +80,7 @@
                                                 </div>
                                                 <div class="col-sm-2">
                                                     <div class="form-group">
-                                                        <div class="input-group"> @Model.FechaEntregaPedido
+                                                        <div class="input-group"> @Model.FechaPedido
                                                         </div>
                                                     </div>
                                                 </div>
@@ -96,9 +96,9 @@
                                                 <div class="col-sm-4">
                                                     <div class="form-group">
                                                         <div class="input-group">
-                                                            @Model.NombreRfc - @Model.cliente.Rfc
+                                                            @Model.NombreRfc - @Model.Rfc
                                                             <input type="hidden" name="NombreRfc" value="@Model.NombreRfc" />
-                                                            <input type="hidden" name="IdCliente" value="@Model.cliente.IdCliente" />
+                                                            <input type="hidden" name="IdCliente" value="@Model.IdCliente" />
                                                         </div>
                                                     </div>
                                                 </div>
@@ -114,7 +114,7 @@
                                                 <div class="col-sm-2">
                                                     <div class="form-group">
                                                         <div class="input-group">
-                                                            @Model.FechaRegistroPedido
+                                                            @Model.FechaPedido
                                                         </div>
                                                     </div>
                                                 </div>                                               
@@ -196,7 +196,7 @@
                                                     <div class="col-sm-2">
                                                         <div class="form-group">
                                                             <div class="input-group">
-                                                                @Model.cliente.Telefono1
+                                                                @Model.Telefono1
                                                             </div>
                                                         </div>
                                                     </div>
@@ -304,7 +304,7 @@
                                                     <div class="col-sm-2">
                                                         <div class="form-group">
                                                             <div class="input-group">
-                                                                @Model.cliente.Telefono1
+                                                                @Model.Telefono1
                                                             </div>
                                                         </div>
                                                     </div>
