JSA-Correcion validaciones

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Nuevo.cshtml
@@ -184,7 +184,7 @@
                                                          </div>*@
                                                 </div>
                                             </div>
-                                            @*@Html.ValidationMessageFor(m => m.IdCliente, "", new { @class = "alert-danger" })*@
+                                            @Html.ValidationMessageFor(m => m.IdCliente, "", new { @class = "alert-danger" })
                                             <div class="row clearfix">
                                                 <div class="col-sm-3">
                                                     <b>Domicilio:</b>
@@ -217,7 +217,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            @*@Html.ValidationMessageFor(m => m.Orden, "", new { @class = "alert-danger" })*@
+                                            @Html.ValidationMessageFor(m => m.Orden, "", new { @class = "alert-danger" })
                                             <div class="row clearfix">
                                                 <div class="col-sm-3">
                                                     <b>Tipo unidad:</b>
