CJAL-13/02/2019- Se agrega nombre al grid Cartera vencida

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CreditoRecuperado.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CreditoRecuperado.cshtml
@@ -155,7 +155,7 @@
                                                                 <td>@item.Ticket</td>
                                                                 <td>@item.FechaRegistro</td>
                                                                 <td>@x.FechaAbono</td>
-                                                                <td>@item.Cliente</td>
+                                                                <td>@item.Nombre</td>
                                                                 <td>@x.MontoAbono</td>
                                                                 <td>@x.FormaPago</td>
                                                             </tr>
