CJAL-13/02/2019-Se agregan roles del modulo cobranza y pedidos

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CarteraVencida.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CarteraVencida.cshtml
@@ -150,8 +150,8 @@
                                             {
                                                 foreach (var item in Model.reportedet)
                                                 {
-                                                    if(item.Cliente!=""&& item.Cliente != null)
-                                                    {
+                                                    //if(item.Cliente!=""&& item.Cliente != null)
+                                                    //{
                                                     <tr>
                                                         <td>@item.Nombre</td>
                                                         <td>@item.FechaRegistro</td>
@@ -168,7 +168,7 @@
                                                         <td>@item.Dias62a91</td>
                                                         <td>@item.Mas91</td>
                                                     </tr>
-                                                    }
+                                                    //}
                                                 }
                                             }
                                         </tbody>
