--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolRequsicion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolRequsicion.cshtml
@@ -81,7 +81,14 @@
 @Html.HiddenFor(m => m.CatModificarPrecioVenta)
 @Html.HiddenFor(m => m.CatEliminarPrecioVenta)
 @Html.HiddenFor(m => m.CatConsultarPrecioVenta)
- 
+ @Html.HiddenFor(m => m.CobranzaVerAbonos)
+@Html.HiddenFor(m => m.CobranzaVerCartera)
+@Html.HiddenFor(m => m.CobranzaVerCreditoRecuperado)
+@Html.HiddenFor(m => m.CobranzaGenerarAbonos)
+@Html.HiddenFor(m => m.PedidoVerPedido)
+@Html.HiddenFor(m => m.PedidoGenerarPedido)
+@Html.HiddenFor(m => m.PedidoModificarPedido)
+@Html.HiddenFor(m => m.PedidoEliminarPedido)
 <tr>
     <td>@Model.NombreRol </td>
     <td>@Html.CheckBoxFor(m => m.RequisicionVerRequisiciones)</td>
