CJAL-14/02/2019-Se corrige issue de roles de punto de venta

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolDto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolDto.cshtml
@@ -262,6 +262,10 @@
     @Html.HiddenFor(m => m.PedidoGenerarPedido)
     @Html.HiddenFor(m => m.PedidoModificarPedido)
     @Html.HiddenFor(m => m.PedidoEliminarPedido)
+    @Html.HiddenFor(m => m.AppDisposicionEfectivo)
+    @Html.HiddenFor(m => m.AppCamionetaPuntoVenta)
+    @Html.HiddenFor(m => m.AppEstacionCarbPuntoVenta)
+    @Html.HiddenFor(m => m.AppPipaPuntoVenta)
     <tr>
         <td>@Model.NombreRol </td>
         <td>@Html.CheckBoxFor(m => m.CatInsertarUsuario)</td>
