--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolSistemaVenta.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolSistemaVenta.cshtml
@@ -89,6 +89,11 @@
 @Html.HiddenFor(m => m.AppTomaLecturaReporteDelDia)
 @Html.HiddenFor(m => m.AppTraspasoEstacionCarb)
 @Html.HiddenFor(m => m.AppTraspasoPipa)
+@Html.HiddenFor(m => m.AppDisposicionEfectivo)
+@Html.HiddenFor(m => m.AppCamionetaPuntoVenta)
+@Html.HiddenFor(m => m.AppEstacionCarbPuntoVenta)
+@Html.HiddenFor(m => m.AppPipaPuntoVenta)
+ 
 <tr>
     <td>@Model.NombreRol </td>
     <td>@Html.CheckBoxFor(m => m.CobranzaVerAbonos)</td>
