--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolMovilCompra.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolMovilCompra.cshtml
@@ -6,8 +6,6 @@
 @Html.HiddenFor(m => m.Rol1)
 @Html.HiddenFor(m => m.Activo)
 @Html.HiddenFor(m => m.FechaRegistro)
-
-@*MovilCompra*@
 @Html.HiddenFor(m => m.CompraVerOCompra)
 @Html.HiddenFor(m => m.CompraGenerarOCompra)
 @Html.HiddenFor(m => m.CompraAutorizarOCompra)
@@ -76,6 +74,10 @@
 @Html.HiddenFor(m => m.PedidoGenerarPedido)
 @Html.HiddenFor(m => m.PedidoModificarPedido)
 @Html.HiddenFor(m => m.PedidoEliminarPedido)
+@Html.HiddenFor(m => m.AppDisposicionEfectivo)
+@Html.HiddenFor(m => m.AppCamionetaPuntoVenta)
+@Html.HiddenFor(m => m.AppEstacionCarbPuntoVenta)
+@Html.HiddenFor(m => m.AppPipaPuntoVenta)
 <tr>
     <td>@Model.NombreRol </td>
     <td>@Html.CheckBoxFor(m => m.AppCompraVerOCompra)</td>
